# alura-django-rest-framework

./: pyproject.toml
apps/escola/: admin.py  apps.py  urls.py
apps/escola/migrations/: 0001_initial.py  0002_registration.py  0003_alter_student_cpf.py  0004_alter_course_code.py
apps/escola/models/: __init__.py  course_model.py  registration_model.py  student_model.py
apps/escola/router/: __init__.py  course_router.py  registration_router.py  student_router.py
apps/escola/serializers/: course_registrations_list_serializer.py  course_serializer.py  registration_serializer.py  student_registrations_list_serializer.py  student_serializer.py
apps/escola/validators/: __init__.py  student_validator.py
apps/escola/views/: course_registration_views.py  course_views.py  registration_views.py  student_registration_views.py  student_views.py
setup/: settings.py  urls.py
